--- a/src/templates/hole.html
+++ b/src/templates/hole.html
@@ -5,6 +5,10 @@
   <dl class="dl-horizontal">
     <dt>Description:</dt>
     <dd>{{ hole.description|e }}</dd>
+    {% if hole.constantName %}
+      <dt>Constant Name:</dt>
+      <dd>{{ hole.constantName|e }}</dd>
+    {% endif %}
     <dt>Trim:</dt>
     <dd>{{ hole.trim|e }}</dd>
     <dt>Sample:</dt>
