--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -12,7 +12,7 @@
         {% if username %}
           Welcome, {{ username|e }}
         {% else %}
-          <a href="/login">Login</a>
+          <a href="/login">Login</a> / <a href="/register">Register</a>
         {% endif %}
       </div>
       <h1><a href="/">Codegolf <small>What's your par?</small></a></h1>
