--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -5,6 +5,6 @@
 <form method="post">
   <input type="text" name="username" placeholder="Username" />
   <input type="password" name="password" placeholder="Password" />
-  <input type="submit" />
+  <button type="submit">Submit</button>
 </form>
 {% endblock %}
