Add submission upload.
The submissions will be uploaded into a submissions array in the hole
document along with their full results.  Currently, the results are not
visible on the site, but that will change soon :)

Had to make a change in the codegolf package to return the full results
so this updates that dependency.

--- a/src/templates/hole.html
+++ b/src/templates/hole.html
@@ -14,4 +14,11 @@
     <dt>Sample:</dt>
     <dd><pre>{{ hole.sample|e }}</pre></dd>
   </dl>
+  {% if username %}
+    <form enctype="multipart/form-data" method="post" action="/holes/{{ hole._id|e('url') }}/submissions">
+      <legend>Submit a file</legend>
+      <input type="file" name="submission" /><br />
+      <button type="submit" class="btn">Submit</button>
+    </form>
+  {% endif %}
 {% endblock %}
