--- a/src/templates/hole.html
+++ b/src/templates/hole.html
@@ -1,24 +1,42 @@
 {% extends "base.html" %}
 {% block title %}{{ hole.title|e }}{% endblock %}
 {% block content %}
-  <h2>{{ hole.title|e }}</h2>
-  <dl class="dl-horizontal">
-    <dt>Description:</dt>
-    <dd>{{ hole.description|e }}</dd>
-    {% if hole.constantName %}
-      <dt>Constant Name:</dt>
-      <dd>{{ hole.constantName|e }}</dd>
-    {% endif %}
-    <dt>Trim:</dt>
-    <dd>{{ hole.trim|e }}</dd>
-    <dt>Sample:</dt>
-    <dd><pre>{{ hole.sample|e }}</pre></dd>
-  </dl>
-  {% if username %}
-    <form enctype="multipart/form-data" method="post" action="/holes/{{ hole._id|e('url') }}/submissions">
-      <legend>Submit a file</legend>
-      <input type="file" name="submission" /><br />
-      <button type="submit" class="btn">Submit</button>
-    </form>
-  {% endif %}
+  <div class="row">
+    <div class="span8">
+      <h2>{{ hole.title|e }}</h2>
+      <dl class="dl-horizontal">
+        <dt>Description:</dt>
+        <dd>{{ hole.description|e }}</dd>
+        {% if hole.constantName %}
+          <dt>Constant Name:</dt>
+          <dd>{{ hole.constantName|e }}</dd>
+        {% endif %}
+        <dt>Trim:</dt>
+        <dd>{{ hole.trim|e }}</dd>
+        <dt>Sample:</dt>
+        <dd><pre>{{ hole.sample|e }}</pre></dd>
+      </dl>
+      {% if username %}
+        <form enctype="multipart/form-data" method="post" action="/holes/{{ hole._id|e('url') }}/submissions">
+          <legend>Submit a file</legend>
+          <input type="file" name="submission" /><br />
+          <button type="submit" class="btn">Submit</button>
+        </form>
+      {% endif %}
+    </div>
+    <div class="span4">
+      <h3>Recent Scores</h3>
+      <table class="table">
+        <tr>
+          <th>Username</th>
+          <th>Length</th>
+        </tr>
+      {% for submission in hole.submissions %}
+        <tr class="{% if submission.result %}success{% else %}error{% endif %}">
+          <td>{{ submission.username|e }}</td>
+          <td>{{ submission.length|e }}</td>
+        </tr>
+      {% endfor %}
+    </table>
+  </div>
 {% endblock %}
