Allow a user to view their submissions in the recent list.
This lets a user get access to the output and error messages.

I want the diff to be shown but this will do for now.  Also missing is a
place for a user to view all of their submissions.

--- a/src/templates/hole.html
+++ b/src/templates/hole.html
@@ -48,7 +48,15 @@
       {% for submission in hole.submissions %}
         <tr class="{% if submission.result %}success{% else %}error{% endif %}">
           <td>{{ submission.username|e }}</td>
-          <td>{{ submission.length|e }}</td>
+          <td>
+            {% if submission.username == username %}
+              <a href="/holes/{{ hole._id|e('url') }}/submissions/{{ submission._id|e('url') }}">
+            {% endif %}
+            {{ submission.length|e }}
+            {% if submission.username == username %}
+              </a>
+            {% endif %}
+          </td>
         </tr>
       {% endfor %}
     </table>
