Store entire authenticated user record in config.
This is mainly just to make code a little cleaner and to get full, exact
access to the user details.

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -9,8 +9,8 @@
   <body>
     <div class="page-header">
       <div class="pull-right">
-        {% if username %}
-          Welcome, {{ username|e }}
+        {% if user %}
+          Welcome, {{ user.username|e }}
         {% else %}
           <a href="/login">Login</a> / <a href="/register">Register</a>
         {% endif %}
