--- a/src/templates/hole.html
+++ b/src/templates/hole.html
@@ -33,7 +33,7 @@
         </tr>
         {% for submission in hole.scoreboard %}
           <tr>
-            <td>{{ submission.user.username|e }}</td>
+            <td><a href="/users/{{ submission.user._id|e('url') }}">{{ submission.user.username|e }}</a></td>
             <td>{{ submission.score|e }}</td>
           </tr>
         {% endfor %}
@@ -47,7 +47,7 @@
         </tr>
       {% for submission in hole.submissions %}
         <tr class="{% if submission.result %}success{% else %}error{% endif %}">
-          <td>{{ submission.user.username|e }}</td>
+          <td><a href="/users/{{ submission.user._id|e('url') }}">{{ submission.user.username|e }}</a></td>
           <td>
             {% if submission.user._id == user._id or user.isAdmin %}
               <a href="/holes/{{ hole._id|e('url') }}/submissions/{{ submission._id|e('url') }}">
