--- a/src/templates/hole.html
+++ b/src/templates/hole.html
@@ -26,7 +26,7 @@
     </div>
     <div class="span4">
       <h3>Scoreboard</h3>
-      <table class="table">
+      <table class="table table-condensed table-hover">
         <tr>
           <th>Username</th>
           <th>Score</th>
@@ -40,7 +40,7 @@
       </table>
 
       <h3>Recent Scores</h3>
-      <table class="table">
+      <table class="table table-condensed table-hover">
         <tr>
           <th>Username</th>
           <th>Length</th>
