--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -6,7 +6,7 @@
     <h3><a href="/holes/{{ hole._id|e('url') }}">{{ hole.title|e }} <small>{{ hole.shortDescription|e }}</small></a></h3>
   {% endfor %}
   <h2>Users</h2>
-  <table class="table">
+  <table class="table table-hover">
     <tr>
       <th>Username</th>
       <th>Score</th>
