--- a/src/templates/user.html
+++ b/src/templates/user.html
@@ -3,7 +3,7 @@
 {% block content %}
   <h2>{{ viewUser.username|e }}</h2>
   <h3>Submissions</h3>
-  <table class="table">
+  <table class="table table-hover">
     <tr>
       <th>Hole</th>
       <th>Length</th>
