Add constant to submission details.
Forgot to add this earlier.  Definitely something needed for bug hunting
submissions.

--- a/src/templates/submission.html
+++ b/src/templates/submission.html
@@ -13,6 +13,8 @@
     <dd><pre>{{ submission.sample|e }}</pre></dd>
     <dt>Error:</dt>
     <dd><pre>{{ submission.stderr|e }}</pre></dd>
+    <dt>Constant:</dt>
+    <dd><pre>{{ submission.constant|e }}</pre></dd>
     <dt>Exit Status:</dt>
     <dd>{{ submission.exitStatus|e }}</dd>
     <dt>Length:</dt>
