--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width; initial-scale=1.0" />
-    <title>{% block title %}{% endblock %} - Codegolf</title>
+    <title>{% block title %}{% endblock %} - Bizgolf</title>
     <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
   </head>
   <body>
@@ -15,7 +15,7 @@
           <a href="/login">Login</a> / <a href="/register">Register</a>
         {% endif %}
       </div>
-      <h1><a href="/">Codegolf <small>What's your par?</small></a></h1>
+      <h1><a href="/">Bizgolf <small>What's your par?</small></a></h1>
     </div>
     {% if flash.error %}
       <div class="alert alert-error">{{ flash.error }}</div>
