--- a/src/templates/hole.html
+++ b/src/templates/hole.html
@@ -29,11 +29,13 @@
       <table class="table table-condensed table-hover">
         <tr>
           <th>Username</th>
+          <th>Length</th>
           <th>Score</th>
         </tr>
         {% for submission in hole.scoreboard %}
           <tr>
             <td><a href="/users/{{ submission.user._id|e('url') }}">{{ submission.user.username|e }}</a></td>
+            <td>{{ submission.length|e }}</td>
             <td>{{ submission.score|e }}</td>
           </tr>
         {% endfor %}
