--- a/src/templates/user.html
+++ b/src/templates/user.html
@@ -2,32 +2,59 @@
 {% block title %}{{ viewUser.username|e }}{% endblock %}
 {% block content %}
   <h2>{{ viewUser.username|e }}</h2>
-  <h3>Scoreboard</h3>
-  <table class="table table-hover">
-    <tr>
-      <th>Hole</th>
-      <th>Length</th>
-      <th>Score</th>
-    </tr>
-    {% for submission in viewUser.scoreboard %}
-      <tr>
-        <td><a href="/holes/{{ submission.hole._id|e('url') }}">{{ submission.hole.title|e }}</a></td>
-        <td>
-          {% if submission.submission.user._id == user._id or user.isAdmin %}
-            <a href="/holes/{{ submission.hole._id|e('url') }}/submissions/{{ submission.submission._id|e('url') }}">
-          {% endif %}
-            {{ submission.submission.length|e }}
-          {% if submission.submission.user._id == user._id or user.isAdmin %}
-            </a>
-          {% endif %}
-        </td>
-        <td>{{ submission.submission.score|e }}</td>
-      </tr>
-    {% endfor %}
-    <tr class="info">
-      <td><strong>Total</strong></td>
-      <td></td>
-      <td><strong>{{ viewUser.stats.score|e }}</strong></td>
-    </tr>
-  </table>
+  <div class="row">
+    <div class="span6">
+      <h3>Scoreboard</h3>
+      <table class="table table-hover">
+        <tr>
+          <th>Hole</th>
+          <th>Length</th>
+          <th>Score</th>
+        </tr>
+        {% for submission in viewUser.scoreboard %}
+          <tr>
+            <td><a href="/holes/{{ submission.hole._id|e('url') }}">{{ submission.hole.title|e }}</a></td>
+            <td>
+              {% if submission.submission.user._id == user._id or user.isAdmin %}
+                <a href="/holes/{{ submission.hole._id|e('url') }}/submissions/{{ submission.submission._id|e('url') }}">
+              {% endif %}
+                {{ submission.submission.length|e }}
+              {% if submission.submission.user._id == user._id or user.isAdmin %}
+                </a>
+              {% endif %}
+            </td>
+            <td>{{ submission.submission.score|e }}</td>
+          </tr>
+        {% endfor %}
+        <tr class="info">
+          <td><strong>Total</strong></td>
+          <td></td>
+          <td><strong>{{ viewUser.stats.score|e }}</strong></td>
+        </tr>
+      </table>
+    </div>
+    <div class="span6">
+      <h3>Recent Scores</h3>
+      <table class="table table-hover">
+        <tr>
+          <th>Hole</th>
+          <th>Length</th>
+        </tr>
+        {% for submission in viewUser.submissions %}
+          <tr class="{% if submission.result %}success{% else %}error{% endif %}">
+            <td><a href="/holes/{{ submission.hole._id|e('url') }}">{{ submission.hole.title|e }}</a></td>
+            <td>
+              {% if submission.user._id == user._id or user.isAdmin %}
+                <a href="/holes/{{ submission.hole._id|e('url') }}/submissions/{{ submission._id|e('url') }}">
+              {% endif %}
+                {{ submission.length|e }}
+              {% if submission.user._id == user._id or user.isAdmin %}
+                </a>
+              {% endif %}
+            </td>
+          </tr>
+        {% endfor %}
+      </table>
+    </div>
+  </div>
 {% endblock %}
