--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Holes{% endblock %}
+{% block title %}Home{% endblock %}
 {% block content %}
   <h2>Holes</h2>
   {% for hole in holes %}
