--- a/src/templates/user.html
+++ b/src/templates/user.html
@@ -35,7 +35,7 @@
     </div>
     <div class="span6">
       <h3>Recent Scores</h3>
-      <table class="table table-hover">
+      <table class="table table-condensed table-hover">
         <tr>
           <th>Hole</th>
           <th>Length</th>
