--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -1,10 +1,14 @@
 {% extends "base.html" %}
 {% block title %}Home{% endblock %}
 {% block content %}
-  <h2>Holes</h2>
-  {% for hole in holes %}
-    <h3><a href="/holes/{{ hole._id|e('url') }}">{{ hole.title|e }} <small>{{ hole.shortDescription|e }}</small></a></h3>
-  {% endfor %}
+  <div class="hero-unit">
+    <h2>Holes</h2>
+    <ul class="unstyled">
+    {% for hole in holes %}
+      <li><a href="/holes/{{ hole._id|e('url') }}">{{ hole.title|e }}</a> - <small>{{ hole.shortDescription|e }}</small></li>
+    {% endfor %}
+    </ul>
+  </div>
 
   <div class="row">
     <div class="span6">
