Add scores to recent score tables.

--- a/src/templates/hole.html
+++ b/src/templates/hole.html
@@ -46,6 +46,7 @@
         <tr>
           <th>Username</th>
           <th>Length</th>
+          <th>Score</th>
         </tr>
       {% for submission in hole.submissions %}
         <tr class="{% if submission.result %}success{% else %}error{% endif %}">
@@ -59,6 +60,7 @@
               </a>
             {% endif %}
           </td>
+          <td>{{ submission.score|e }}</td>
         </tr>
       {% endfor %}
     </table>
