--- a/src/templates/hole.html
+++ b/src/templates/hole.html
@@ -16,7 +16,7 @@
         <dt>Sample:</dt>
         <dd><pre>{{ hole.sample|e }}</pre></dd>
       </dl>
-      {% if user %}
+      {% if user and (user.isAdmin or hole.isOpen) %}
         <form enctype="multipart/form-data" method="post" action="/holes/{{ hole._id|e('url') }}/submissions">
           <legend>Submit a file</legend>
           <input type="file" name="submission" /><br />
