Allow startDate and endDate to be set for new holes.
This is currently requiring the user to enter a unix timestamp, but its
best to get something easy to implement in first and improve later.

--- a/src/templates/new-hole.html
+++ b/src/templates/new-hole.html
@@ -54,6 +54,18 @@
     </div>
   </div>
   <div class="control-group">
+    <label class="control-label" for="startDate">Start Date</label>
+    <div class="controls">
+      <input type="text" name="startDate" placeholder="Start Date (UNIX timestamp)" />
+    </div>
+  </div>
+  <div class="control-group">
+    <label class="control-label" for="endDate">End Date</label>
+    <div class="controls">
+      <input type="text" name="endDate" placeholder="End Date (UNIX timestamp)" />
+    </div>
+  </div>
+  <div class="control-group">
     <div class="controls">
       <button type="submit" class="btn">Submit</button>
     </div>
