--- a/src/templates/submission.html
+++ b/src/templates/submission.html
@@ -16,7 +16,7 @@
     <dt>Error:</dt>
     <dd><pre>{{ submission.stderr|e }}</pre></dd>
     <dt>Constant:</dt>
-    <dd><pre>{{ submission.constant|e }}</pre></dd>
+    <dd><pre>{{ submission.constantName|e }}={{ submission.constantValue|e }}</pre></dd>
     <dt>Exit Status:</dt>
     <dd>{{ submission.exitStatus|e }}</dd>
     <dt>Length:</dt>
