--- a/src/templates/revalidate.html
+++ b/src/templates/revalidate.html
@@ -10,7 +10,7 @@
     </tr>
     {% for submission in changedSubmissions %}
       <tr class="{% if submission.result %}success{% else %}error{% endif %}">
-        <td><a href="/users/{{ submission.user._id|e('url') }}">{{ submission.user.username|e }}</a></td>
+        <td><a href="{{ urlFor('user', {"userId": submission.user._id}) }}">{{ submission.user.username|e }}</a></td>
         <td>{{ submission.length|e }}</td>
         <td>{{ submission.score|e }}</td>
       </tr>
