Allow disabledFunctions and disabledFunctionality for new holes.
These are going to need to be two separate fields for now.  Because
functionality for languages could potentially be something other than
functions themselves, I can't easily get the list of disabled functions
for a hole, so it will need to be supplied manually for now.

--- a/src/templates/new-hole.html
+++ b/src/templates/new-hole.html
@@ -12,6 +12,7 @@
       <div class="span1"><strong>OR</strong></div>
       <div class="span3">
         <input type="text" name="constantName" placeholder="Constant Name" />
+        <input type="text" name="disabledFunctionality" placeholder="Disabled Functionality (CSV)" />
         <div>
           <label for="constantValuesIsAFunction" class="checkbox">
             <input type="checkbox" name="constantValuesIsAFunction" /> Constant Values Is A Function
@@ -45,6 +46,12 @@
     <label class="control-label" for="description">Description</label>
     <div class="controls">
       <textarea name="description" placeholder="Description" class="input-xxlarge" rows="8"></textarea>
+    </div>
+  </div>
+  <div class="control-group">
+    <label class="control-label" for="disabledFunctions">Disabled Functions</label>
+    <div class="controls">
+      <input type="text" name="disabledFunctions" placeholder="Disabled Functions" />
     </div>
   </div>
   <div class="control-group">
