Add links to submissions everywhere, esp. for post mortem.

--- a/src/templates/hole.html
+++ b/src/templates/hole.html
@@ -55,7 +55,15 @@
         {% for submission in hole.scoreboard %}
           <tr>
             <td><a href="{{ urlFor('user', {"userId": submission.user._id}) }}">{{ submission.user.username|e }}</a></td>
-            <td>{{ submission.length|e }}</td>
+            <td>
+              {% if submission.user._id == user._id or user.isAdmin or hole.hasEnded %}
+                <a href="{{ urlFor('submission', {"holeId": hole._id, "submissionId": submission._id}) }}">
+              {% endif %}
+              {{ submission.length|e }}
+              {% if submission.user._id == user._id or user.isAdmin or hole.hasEnded %}
+                </a>
+              {% endif %}
+            </td>
             <td>{{ submission.score|e }}</td>
           </tr>
         {% endfor %}
@@ -76,7 +84,7 @@
               <a href="{{ urlFor('submission', {"holeId": hole._id, "submissionId": submission._id}) }}">
             {% endif %}
             {{ submission.length|e }}
-            {% if submission.user._id == user._id or user.isAdmin %}
+            {% if submission.user._id == user._id or user.isAdmin or hole.hasEnded%}
               </a>
             {% endif %}
           </td>
