--- a/src/templates/user.html
+++ b/src/templates/user.html
@@ -15,11 +15,11 @@
           <tr>
             <td><a href="{{ urlFor('hole', {"holeId": submission.hole._id}) }}">{{ submission.hole.title|e }}</a></td>
             <td>
-              {% if submission.submission.user._id == user._id or user.isAdmin %}
+              {% if submission.submission.user._id == user._id or user.isAdmin or submission.hole.hasEnded %}
                 <a href="{{ urlFor('submission', {"holeId": submission.hole._id, "submissionId": submission.submission._id}) }}">
               {% endif %}
                 {{ submission.submission.length|e }}
-              {% if submission.submission.user._id == user._id or user.isAdmin %}
+              {% if submission.submission.user._id == user._id or user.isAdmin or submission.hole.hasEnded %}
                 </a>
               {% endif %}
             </td>
@@ -45,11 +45,11 @@
           <tr class="{% if submission.result %}success{% else %}error{% endif %}">
             <td><a href="{{ urlFor('hole', {"holeId": submission.hole._id}) }}">{{ submission.hole.title|e }}</a></td>
             <td>
-              {% if submission.user._id == user._id or user.isAdmin %}
-                <a {{ urlFor('submission', {"holeId": submission.hole._id, "submissionId": submission._id}) }}">
+              {% if submission.user._id == user._id or user.isAdmin or submission.hole.hasEnded %}
+                <a href="{{ urlFor('submission', {"holeId": submission.hole._id, "submissionId": submission._id}) }}">
               {% endif %}
                 {{ submission.length|e }}
-              {% if submission.user._id == user._id or user.isAdmin %}
+              {% if submission.user._id == user._id or user.isAdmin or submission.hole.hasEnded %}
                 </a>
               {% endif %}
             </td>
