--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -5,7 +5,9 @@
     <h2>Holes</h2>
     <ul class="unstyled">
     {% for hole in holes %}
-    <li><a href="{{ urlFor('hole', {"holeId": hole._id}) }}">{{ hole.title|e }}</a> - <small>{{ hole.shortDescription|e }}</small></li>
+      <li><a href="{{ urlFor('hole', {"holeId": hole._id}) }}">{{ hole.title|e }}</a> - <small>{{ hole.shortDescription|e }}</small></li>
+    {% else %}
+      <li>No holes are configured.  Check back later!</li>
     {% endfor %}
     </ul>
     {% if user.isAdmin %}
