Add markdown formatting for hole descriptions.

--- a/src/templates/submission.html
+++ b/src/templates/submission.html
@@ -12,7 +12,7 @@
     <dt>Expected:</dt>
     <dd><pre>{{ submission.sample|e }}</pre></dd>
     <dt>Diff:</dt>
-    <dd><pre>{% autoescape false %}{{ submission.diff }}{% endautoescape %}</pre></dd>
+    <dd><pre>{{ submission.diff }}</pre></dd>
     <dt>Error:</dt>
     <dd><pre>{{ submission.stderr|e }}</pre></dd>
     <dt>Constant:</dt>
