--- a/src/templates/hole.html
+++ b/src/templates/hole.html
@@ -6,7 +6,7 @@
       <h2>{{ hole.title|e }}</h2>
       <dl class="dl-horizontal">
         <dt>Description:</dt>
-        <dd>{{ hole.description|e }}</dd>
+        <dd>{{ hole.description }}</dd>
         {% if hole.specification.constantName %}
           <dt>Constant Name:</dt>
           <dd>{{ hole.specification.constantName|e }}</dd>
