--- a/src/templates/hole.html
+++ b/src/templates/hole.html
@@ -18,7 +18,7 @@
         <dt>Trim:</dt>
         <dd>{{ hole.trim|e }}</dd>
         <dt>Sample:</dt>
-        <dd><pre>{{ hole.sample|e }}</pre></dd>
+        <dd><pre>{{ hole.sample }}</pre></dd>
         {% if hole.startDate %}
           <dt>Start Date:</dt>
           <dd>{{ hole.startDateFormatted|e }}</dd>
