--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -6,6 +6,7 @@
     <title>{% block title %}{% endblock %} - Bizgolf</title>
     <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
     <link href="/fshl.css" rel="stylesheet">
+    <link href="/style.css" rel="stylesheet">
     <link rel="icon" type="image/png" href="/favicon.png">
   </head>
   <body>
